--- a/gadget/configs/chippro_defconfig
+++ b/gadget/configs/chippro_defconfig
@@ -18,7 +18,7 @@ BR2_ROOTFS_OVERLAY="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/overla
 BR2_ROOTFS_POST_BUILD_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/scripts/post-build.sh"
 BR2_ROOTFS_POST_FAKEROOT_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/scripts/post-fakeroot.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/scripts/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="\"Toshiba-SLC-4G-TC58NVG2S0H\""
+BR2_ROOTFS_POST_SCRIPT_ARGS="\"toshiba-slc\""
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/NextThingCo/linux"
