--- a/gadget/configs/chip_toshiba_defconfig
+++ b/gadget/configs/chip_toshiba_defconfig
@@ -13,12 +13,12 @@ BR2_TARGET_GENERIC_HOSTNAME="chip"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 # BR2_TARGET_GENERIC_GETTY is not set
-BR2_ROOTFS_USERS_TABLES="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chip/users_table.txt"
-BR2_ROOTFS_OVERLAY="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chip/overlay"
-BR2_ROOTFS_POST_BUILD_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chip/scripts/post-build.sh"
-BR2_ROOTFS_POST_FAKEROOT_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chip/scripts/post-fakeroot.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chip/scripts/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="\"Hynix-MLC\""
+BR2_ROOTFS_USERS_TABLES="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/users_table.txt"
+BR2_ROOTFS_OVERLAY="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/scripts/post-build.sh"
+BR2_ROOTFS_POST_FAKEROOT_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/scripts/post-fakeroot.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/scripts/post-image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="chip,toshiba-mlc"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/NextThingCo/CHIP-linux.git"
@@ -29,7 +29,7 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthi
 BR2_LINUX_KERNEL_LZO=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="sun5i-r8-chip"
-BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chip/configs/busybox.config"
+BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/configs/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
@@ -82,12 +82,10 @@ BR2_TARGET_UBOOT_ENVIMAGE_SOURCE="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/
 BR2_TARGET_UBOOT_ENVIMAGE_SIZE="0x400000"
 BR2_PACKAGE_HOST_DTC=y
 BR2_PACKAGE_HOST_SUNXI_TOOLS=y
-BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_GADGET_BLUETOOTH_CONF=y
 BR2_PACKAGE_GADGET_INITC=y
 BR2_PACKAGE_GADGET_INIT_SCRIPTS=y
 BR2_PACKAGE_GADGET_INIT_SCRIPTS_USB_GADGET=y
-BR2_PACKAGE_GADGET_INIT_SCRIPTS_DOCKERD=y
 BR2_PACKAGE_GADGET_SETUP_SSH_KEY=y
 BR2_PACKAGE_GADGET_TOOLS=y
 BR2_PACKAGE_HOST_DTC_OVERLAY=y
