--- a/gadget/configs/chippro4gb_defconfig
+++ b/gadget/configs/chippro4gb_defconfig
@@ -13,12 +13,12 @@ BR2_TARGET_GENERIC_HOSTNAME="chip"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 # BR2_TARGET_GENERIC_GETTY is not set
-BR2_ROOTFS_USERS_TABLES="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/users_table.txt"
-BR2_ROOTFS_OVERLAY="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/overlay"
-BR2_ROOTFS_POST_BUILD_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/scripts/post-build.sh"
-BR2_ROOTFS_POST_FAKEROOT_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/scripts/post-fakeroot.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/scripts/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="\"Toshiba-MLC\""
+BR2_ROOTFS_USERS_TABLES="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/users_table.txt"
+BR2_ROOTFS_OVERLAY="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/scripts/post-build.sh"
+BR2_ROOTFS_POST_FAKEROOT_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/scripts/post-fakeroot.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/scripts/post-image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="chippro,toshiba-mlc"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/NextThingCo/CHIP-linux"
@@ -29,11 +29,10 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthi
 BR2_LINUX_KERNEL_LZO=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="ntc-gr8-crumb"
-BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/configs/busybox.config"
+BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/configs/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
-BR2_PACKAGE_MTD=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 # BR2_PACKAGE_ALSA_LIB_RAWMIDI is not set
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
@@ -42,6 +41,8 @@ BR2_PACKAGE_LIBCAP=y
 BR2_PACKAGE_BIND=y
 # BR2_PACKAGE_BIND_SERVER is not set
 BR2_PACKAGE_BIND_TOOLS=y
+BR2_PACKAGE_BLUEZ5_UTILS=y
+BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_CONNMAN=y
 # BR2_PACKAGE_CONNMAN_ETHERNET is not set
 BR2_PACKAGE_CONNMAN_WIFI=y
@@ -62,13 +63,11 @@ BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
 BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
 BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION=y
 BR2_PACKAGE_CGROUPFS_MOUNT=y
-BR2_PACKAGE_DOCKER_ENGINE=y
 BR2_PACKAGE_DOCKER_ENGINE_DRIVER_DEVICEMAPPER=y
 BR2_PACKAGE_KMOD=y
 BR2_PACKAGE_KMOD_TOOLS=y
 BR2_PACKAGE_UTIL_LINUX_NOLOGIN=y
 BR2_PACKAGE_NANO=y
-BR2_TARGET_ROOTFS_TAR=y
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
@@ -84,12 +83,10 @@ BR2_TARGET_UBOOT_ENVIMAGE_SOURCE="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/
 BR2_TARGET_UBOOT_ENVIMAGE_SIZE="0x400000"
 BR2_PACKAGE_HOST_DTC=y
 BR2_PACKAGE_HOST_SUNXI_TOOLS=y
-BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_GADGET_BLUETOOTH_CONF=y
 BR2_PACKAGE_GADGET_INITC=y
 BR2_PACKAGE_GADGET_INIT_SCRIPTS=y
 BR2_PACKAGE_GADGET_INIT_SCRIPTS_USB_GADGET=y
-BR2_PACKAGE_GADGET_INIT_SCRIPTS_DOCKERD=y
 BR2_PACKAGE_GADGET_SETUP_SSH_KEY=y
 BR2_PACKAGE_GADGET_TOOLS=y
 BR2_PACKAGE_HOST_DTC_OVERLAY=y
@@ -97,5 +94,5 @@ BR2_PACKAGE_RTL8723BS_MP_DRIVER=y
 BR2_PACKAGE_RTL8723DS_MP_DRIVER=y
 BR2_PACKAGE_RTL8723DS_BT=y
 BR2_PACKAGE_HOST_CHIP_MTD_UTILS=y
-BR2_PACKAGE_GADGETOSD=n
+BR2_PACKAGE_GADGET_UPDATE=y
 BR2_PACKAGE_HOST_CHIP_NAND_SCRIPTS=y
