--- a/gadget/configs/chippro_defconfig
+++ b/gadget/configs/chippro_defconfig
@@ -13,12 +13,12 @@ BR2_TARGET_GENERIC_HOSTNAME="chip"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 # BR2_TARGET_GENERIC_GETTY is not set
-BR2_ROOTFS_USERS_TABLES="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/users_table.txt"
-BR2_ROOTFS_OVERLAY="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/overlay"
-BR2_ROOTFS_POST_BUILD_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/scripts/post-build.sh"
-BR2_ROOTFS_POST_FAKEROOT_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/scripts/post-fakeroot.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/scripts/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="\"toshiba-slc\""
+BR2_ROOTFS_USERS_TABLES="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/users_table.txt"
+BR2_ROOTFS_OVERLAY="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/scripts/post-build.sh"
+BR2_ROOTFS_POST_FAKEROOT_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/scripts/post-fakeroot.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/scripts/post-image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="chippro,toshiba-slc"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/NextThingCo/linux"
@@ -29,7 +29,7 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthi
 BR2_LINUX_KERNEL_LZO=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="ntc-gr8-crumb"
-BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/chippro/configs/busybox.config"
+BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_GADGETOS_PATH}/board/nextthing/common/configs/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
