--- a/gadget/configs/chippro_defconfig
+++ b/gadget/configs/chippro_defconfig
@@ -62,6 +62,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_HOTSPOT=y
 BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
 BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
 BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION=y
+BR2_PACKAGE_BASH=y
 BR2_PACKAGE_CGROUPFS_MOUNT=y
 BR2_PACKAGE_DOCKER_ENGINE_DRIVER_DEVICEMAPPER=y
 BR2_PACKAGE_KMOD=y
